// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders correctly 1`] = `
<Text
  fontFamily="Inter"
  style={
    {
      "color": "#9AA4B2",
      "fontFamily": "Inter",
      "fontSize": 14,
    }
  }
  suppressHighlighting={true}
>
  Test
</Text>
`;

exports[`<App /> renders correctly pin sub text 1`] = `
<Text
  fontFamily="Inter"
  style={
    {
      "color": "#CDD5DF",
      "fontFamily": "Inter",
      "fontSize": 14,
    }
  }
  suppressHighlighting={true}
>
  Test
</Text>
`;

exports[`<App /> renders correctly pin title 1`] = `
<Text
  fontFamily="Inter"
  style={
    {
      "color": "#fff",
      "fontFamily": "Inter",
      "fontSize": 20,
    }
  }
  suppressHighlighting={true}
>
  Test
</Text>
`;
